--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback": "^0.10.0",
     "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
