--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 REDIRECT_URI=http://localhost:3000
 CLIENT_ID=65907f8f732941c4b784206e99c3215e
 CLIENT_SECRET=4c369010bb924c4884569985de8e3961
+PORT=3000
