--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "Server.ts",
   "scripts": {
-    "devStart": "nodemon server.js",
-    "start": "node server.js"
+    "devStart": "ts-node-dev ./src/Server.ts",
+    "start": "ts-node-dev ./src/Server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,9 +16,16 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "lyrics-finder": "^21.7.0",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
