--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "Server.ts",
   "scripts": {
     "devStart": "ts-node-dev ./src/Server.ts",
-    "start": "ts-node-dev ./src/Server.ts",
-    "build": "webpack --config webpack.config.js"
+    "start": "npm run build && node build/Server.js",
+    "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "@types/spotify-web-api-node": "^5.0.7",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
