--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,8 @@
     "rootDir": "./src",
     "outDir": "build",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noImplicitAny": false
   },
   "exclude": ["./__*/**/*.ts"]
 }
