--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "build",
     "strict": true,
     "esModuleInterop": true,
+    "noImplicitAny": false
   },
   "exclude": ["./__*/**/*.ts"]
 }
