--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "devStart": "ts-node-dev ./src/Server.ts",
     "start": "ts-node ./src/Server.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,13 +22,21 @@
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.8",
+    "@types/mocha": "^9.1.1",
     "@types/spotify-web-api-node": "^5.0.7",
+    "@types/supertest": "^2.0.12",
+    "babel-jest": "^29.0.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
-    "rimraf": "^3.0.2",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4" 
+    "typescript": "^4.7.4"
   }
 }
