--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
+    "rootDir": "src",
     "outDir": "build",
-    "strict": true,
     "esModuleInterop": true,
     "noImplicitAny": false
   },
-  "exclude": ["./__*/**/*.ts"]
+  "exclude": [
+    "__*/**/*"
+  ]
 }
